syntax = "proto3";
package configs;

service ConfigsService {
  rpc Count(QueryFilter) returns (Number);

  rpc Create(Config) returns (Config);

  rpc Cursor(Filter) returns (stream Config);

  rpc FindOne(OneFilter) returns (Config);
  rpc FindMany(Filter) returns (Configs);

  rpc FindById(OneFilter) returns (Config);

  rpc DeleteById(OneFilter) returns (Config);
  rpc RestoreById(OneFilter) returns (Config);
  rpc DestroyById(OneFilter) returns (Config);

  rpc UpdateById(UpdateConfigOne) returns (Config);
  rpc UpdateBulk(UpdateConfigBulk) returns (Number);
}

message Number { int32 count = 1; }

message Filter {
  optional string query = 1;
  optional string projection = 2;
  optional string pagination = 3;
}

message OneFilter {
  string query = 1;
  optional string projection = 2;
}

message QueryFilter { optional string query = 1; }

message UpdateConfigOne {
  Config update = 1;
  OneFilter filter = 2;
}

message UpdateConfigBulk {
  Config update = 1;
  QueryFilter filter = 2;
}

message Configs { repeated Config items = 1; }

message Config {
  // Base Schema
  optional string id = 1;
  optional string ref = 2;

  string owner = 3;

  repeated string shares = 4;
  repeated string clients = 5;
  repeated string groups = 6;

  optional string created_at = 7;
  optional string created_by = 8;
  optional string created_in = 9;
  optional string updated_at = 10;
  optional string updated_by = 11;
  optional string updated_in = 12;
  optional string deleted_at = 13;
  optional string deleted_by = 14;
  optional string deleted_in = 15;
  optional string restored_at = 16;
  optional string restored_by = 17;
  optional string restored_in = 18;

  optional string description = 19;
  optional string version = 20;
  optional string attrs = 21;
  repeated string tags = 22;

  // Config Schema
  string key = 50;
  string type = 51;
  optional string value = 52;
}
